instructions.Instructions.scala.error
Compilation error:
Instructions:2: error: too many arguments for method brushDown: ()Unit
brushDown(2)
         ^Instructions:3: error: too many arguments for method right: ()Unit
right(2)
     ^Instructions:4: error: too many arguments for method brushUp: ()Unit
brushUp(2)
       ^Instructions:5: error: too many arguments for method left: ()Unit
left(2)
    ^