instructions.Instructions.scala.code
forward()
brushDown(2)
right(2)
brushUp(2)
left(2)
